CHANGES
*******

3.10.1 (unreleased)
===================

- Nothing changed yet.


3.10.0 (2010-09-25)
===================

- Got rid of the docs extra and the sphinxdoc recipe.

- Created a "security" extra to move security-related dependencies out of the
  "test" extra.

- Use the new zope.testrunner package for tests.

- Added a basic test for the configure.zcml file provided.

3.9.5 (2010-07-09)
==================

- Fix test requirements specification.

3.9.4 (2010-04-30)
==================

- Prefer the standard libraries doctest module to the one from zope.testing.

3.9.3 (2010-03-08)
==================

- The ZCML directives provided by zope.component now register the components in
  the registry returned by getSiteManager instead of the global registry. This
  allows the hooking of the getSiteManager method before the load of a ZCML
  file to register the components in a custom registry.

3.9.2 (2010-01-22)
==================

- Fixed a bug introduced by recent refactoring, where passing
  CheckerPublic to securityAdapterFactory wrongly wrapped the factory
  into a LocatingUntrustedAdapterFactory.

3.9.1 (2010-01-21)
==================

- The tested testrunner somehow gets influenced by options of the outer
  testrunner, such a the -v option. We modified the tests so that it avoids
  this.

3.9.0 (2010-01-21)
==================

- Add testlayer support. It is now possible to load a ZCML file within
  tests more easily. See zope.component.testlayer.py and
  zope.component.testlayer.txt.

3.8.0 (2009-11-16)
==================

- Removed the dependencies on zope.proxy and zope.security from the zcml extra:
  zope.component does not hard depend on them anymore; the support for security
  proxied components ZCML registrations is enabled only if zope.security and
  zope.proxy are available.

- Moved the IPossibleSite and ISite interfaces here from zope.location as they
  are dealing with zope.component's concept of a site, but not with location.
